--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -3489,11 +3489,11 @@
         "print('MAE: ', -clf.best_score_)"
       ],
       "metadata": {
-        "id": "LJ9ub7rwHRYy",
-        "outputId": "f61ed139-b04a-48cf-a102-0f7e4fa092b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LJ9ub7rwHRYy",
+        "outputId": "f61ed139-b04a-48cf-a102-0f7e4fa092b0"
       },
       "execution_count": 104,
       "outputs": [
@@ -3524,12 +3524,12 @@
         "display(pd.DataFrame([['MSE', mse],['MAE', mae],['RMSE', rmse],['R2', r2]], columns=['Metric', 'Score']))"
       ],
       "metadata": {
-        "id": "qLxbBZs7HbG4",
-        "outputId": "1ad21958-c371-46c4-82d6-ef37bdfa2bf7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        }
+        },
+        "id": "qLxbBZs7HbG4",
+        "outputId": "1ad21958-c371-46c4-82d6-ef37bdfa2bf7"
       },
       "execution_count": 105,
       "outputs": [
@@ -3681,11 +3681,11 @@
         "a = pipe.named_steps['randomforestregressor']"
       ],
       "metadata": {
-        "id": "zGOuAQiQJj6Y",
-        "outputId": "f9fbeb6b-5cd6-45cd-a50b-5fce6b28d4c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zGOuAQiQJj6Y",
+        "outputId": "f9fbeb6b-5cd6-45cd-a50b-5fce6b28d4c2"
       },
       "execution_count": 109,
       "outputs": [
@@ -3722,12 +3722,12 @@
         "importances.sort_values()[-n:].plot.barh();"
       ],
       "metadata": {
-        "id": "pf8jOaYKJWiw",
-        "outputId": "bc010eec-9193-458d-cae1-6f842646039c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 262
-        }
+        },
+        "id": "pf8jOaYKJWiw",
+        "outputId": "bc010eec-9193-458d-cae1-6f842646039c"
       },
       "execution_count": 111,
       "outputs": [
@@ -3791,11 +3791,11 @@
         "pd.Series(permuter.feature_importances_, feature_names).sort_values(ascending = False)"
       ],
       "metadata": {
-        "id": "ap5tSwJ8UHux",
-        "outputId": "9a5b4db7-9ee1-458a-a878-3fe240d98fa7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ap5tSwJ8UHux",
+        "outputId": "9a5b4db7-9ee1-458a-a878-3fe240d98fa7"
       },
       "execution_count": 134,
       "outputs": [
@@ -3829,12 +3829,12 @@
         ")"
       ],
       "metadata": {
-        "id": "1UcwTerUUQSs",
-        "outputId": "15f1eac8-7ae5-4006-cd7e-71e7c7ab2a47",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 156
-        }
+        },
+        "id": "1UcwTerUUQSs",
+        "outputId": "15f1eac8-7ae5-4006-cd7e-71e7c7ab2a47"
       },
       "execution_count": 135,
       "outputs": [
@@ -4019,6 +4019,221 @@
       "metadata": {
         "id": "Zn9YkzZ8SeLv"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_table = pd.DataFrame({\"y_value\":y_val,\"y_pred\":y_pred_val_rf})\n",
+        "\n",
+        "df_table[\"Diff\"] = df_table[\"y_value\"] - df_table[\"y_pred\"]\n",
+        "df_table[\"(%)\"] = abs(df_table[\"Diff\"]/df_table[\"y_value\"])*100\n",
+        "\n",
+        "df_table.head()"
+      ],
+      "metadata": {
+        "id": "RL2MJzAFV4ru",
+        "outputId": "a93527e6-4c45-4ed7-9714-d608dad054c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        }
+      },
+      "execution_count": 156,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "      y_value  y_pred    Diff  (%)\n",
+              "9501    22490 22785.0  -295.0  1.3\n",
+              "8026    12490 15505.7 -3015.7 24.1\n",
+              "7170    10490 12047.2 -1557.2 14.8\n",
+              "9097    12850 13042.4  -192.4  1.5\n",
+              "4804    16000 14734.2  1265.8  7.9"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-f35144ad-f809-4e1b-8d5e-2f4a848902a1\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>y_value</th>\n",
+              "      <th>y_pred</th>\n",
+              "      <th>Diff</th>\n",
+              "      <th>(%)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>9501</th>\n",
+              "      <td>22490</td>\n",
+              "      <td>22785.0</td>\n",
+              "      <td>-295.0</td>\n",
+              "      <td>1.3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8026</th>\n",
+              "      <td>12490</td>\n",
+              "      <td>15505.7</td>\n",
+              "      <td>-3015.7</td>\n",
+              "      <td>24.1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7170</th>\n",
+              "      <td>10490</td>\n",
+              "      <td>12047.2</td>\n",
+              "      <td>-1557.2</td>\n",
+              "      <td>14.8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9097</th>\n",
+              "      <td>12850</td>\n",
+              "      <td>13042.4</td>\n",
+              "      <td>-192.4</td>\n",
+              "      <td>1.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4804</th>\n",
+              "      <td>16000</td>\n",
+              "      <td>14734.2</td>\n",
+              "      <td>1265.8</td>\n",
+              "      <td>7.9</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f35144ad-f809-4e1b-8d5e-2f4a848902a1')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-f35144ad-f809-4e1b-8d5e-2f4a848902a1 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-f35144ad-f809-4e1b-8d5e-2f4a848902a1');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 156
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_table[\"(%)\"].describe()"
+      ],
+      "metadata": {
+        "id": "94Nlu1hsWyJU",
+        "outputId": "367909af-f1d9-4901-f2d2-1002fd6ddd64",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 154,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "count   2556.0\n",
+              "mean      -2.3\n",
+              "std       14.5\n",
+              "min     -111.0\n",
+              "25%       -9.0\n",
+              "50%       -0.9\n",
+              "75%        6.0\n",
+              "max       62.4\n",
+              "Name: (%), dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 154
+        }
+      ]
     }
   ]
 }
