--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "jOrdXE9qMdzP",
         "colab": {
@@ -367,7 +367,7 @@
         "id": "VjFifFe_Ah2b",
         "outputId": "a94cb88a-c744-494d-cefc-1e51547f1a5d"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -403,7 +403,7 @@
         "id": "iG-40yx_AjfX",
         "outputId": "9e010e34-72a7-4790-f6e0-60f4df6d5d1d"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +620,7 @@
         "id": "EgHlvPpzA-TO",
         "outputId": "c5d8a41a-9f2f-4d76-c21d-cca32d93de18"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -655,7 +655,7 @@
       "metadata": {
         "id": "Qd4xvBP3BCme"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -681,7 +681,7 @@
         "id": "3lVWpmgbCkEK",
         "outputId": "675127fd-dc0d-4557-c1d7-082a1ad81eb4"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -745,7 +745,7 @@
         "id": "Q97545esL3FU",
         "outputId": "3381c0b4-96bc-4ca6-f115-2b383418ca53"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -796,7 +796,7 @@
         "id": "K_iUna16Oh9s",
         "outputId": "835f06be-2f11-4b7b-b0d8-5e1c29df830b"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -840,7 +840,7 @@
         "id": "wyGfLiNOEsY-",
         "outputId": "7a5a06b1-23cb-4f31-e517-ed139152b2b8"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -893,7 +893,7 @@
         "id": "kCpc-4UjGHDi",
         "outputId": "cde40c5f-f7a9-43a8-d393-85f491c380c9"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -941,7 +941,7 @@
         "id": "DSn13sIkGYjp",
         "outputId": "452ac7c3-5d56-4b7d-9186-648e5e18c631"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1099,7 +1099,7 @@
         "id": "jenxWa6wIXzy",
         "outputId": "0c30251c-72bf-4061-c612-0f859928d44a"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1144,7 +1144,7 @@
         "id": "zv1-ZsGcKF9p",
         "outputId": "554439c3-62be-4cd9-aecd-c391a151de23"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1188,7 +1188,7 @@
       "metadata": {
         "id": "CsGXAvZPK0iX"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1216,7 +1216,7 @@
         "id": "O8meNoIdOyfU",
         "outputId": "c8b152a0-1558-4c30-de55-06702547cc43"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1256,7 +1256,7 @@
         "id": "ipKsDuLheRpp",
         "outputId": "0369694b-c6c2-4ec7-9c5e-b32d147fff2e"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1411,7 +1411,7 @@
         "id": "ynTvN6E5P1Af",
         "outputId": "0c03b84f-a94a-4a29-eb5f-4f28a97e0a2f"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1449,7 +1449,7 @@
       "metadata": {
         "id": "VD8XgvedPW_k"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1461,7 +1461,7 @@
       "metadata": {
         "id": "1nF6Ct4heqeH"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1477,7 +1477,7 @@
           "height": 490
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1515,7 +1515,7 @@
           "height": 508
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1559,7 +1559,7 @@
         "id": "cDT4kkFjcS7b",
         "outputId": "c9825331-0373-4d8d-8851-245ae1e61110"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1591,7 +1591,7 @@
       "metadata": {
         "id": "sbWER2JJPtZj"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1602,7 +1602,7 @@
       "metadata": {
         "id": "0RLHSbDoilE5"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1613,7 +1613,7 @@
       "metadata": {
         "id": "0EFpjLSdjivg"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1624,7 +1624,7 @@
       "metadata": {
         "id": "FBqwaI0eGuv7"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1635,7 +1635,7 @@
       "metadata": {
         "id": "Y6YP3vYFIJW4"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1646,7 +1646,7 @@
       "metadata": {
         "id": "vz3nWRphFzCh"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1685,7 +1685,7 @@
         "id": "0XyZQE7Pk6Fr",
         "outputId": "28283d45-594f-48b7-93d4-ac2524786069"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1728,12 +1728,11 @@
       "metadata": {
         "id": "-FhytgOXMpuq",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "b16057e6-b75f-4ff2-9685-b43ba53ffc63"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1773,13 +1772,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "grOEUn91dPA2",
         "outputId": "d871537d-572d-4f7f-ebd9-f2873175a717"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1955,13 +1953,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "MvOv75APTvfK",
         "outputId": "39c5c072-5ac9-40a7-948b-64a16f83530d"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1985,13 +1982,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "uOL0iA_Idjjm",
         "outputId": "59562155-7f9c-48e9-bd3b-4e4f18f9607c"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2044,13 +2040,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "iJPIV4YvkawQ",
         "outputId": "7f48b914-6039-41a3-a671-5f6b7c73ffb3"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2222,13 +2217,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "-fsZ7ZUKWmpx",
         "outputId": "2a6ea863-c7bf-4cf2-8543-0aa8337c6ee1"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2256,13 +2250,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Lw1ge908hDFI",
         "outputId": "cabeb08d-9acb-43ef-b40a-fb5654125d57"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2436,7 +2429,7 @@
         "id": "LIyL1JXlb_ah",
         "outputId": "2f1b7add-a140-4912-d04b-5801ee0bb897"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2479,7 +2472,7 @@
         "id": "0k98KLDljiVW",
         "outputId": "71b4ebc7-6110-472c-f7f1-fca5977d0706"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2509,13 +2502,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "v7UM8uWgkaJx",
         "outputId": "4efc052c-e04b-432b-e822-1fb53cd029c7"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2724,13 +2716,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "7_mpIyOMlK7Y",
         "outputId": "c50842b9-5d43-44bb-feff-629fb3ec6f3a"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2823,13 +2814,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "4tpCN4rhsuw_",
         "outputId": "8bb8ae9c-9961-455c-a984-7c474ef9efec"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3027,7 +3017,7 @@
         "id": "JmS48JDAtkFo",
         "outputId": "65d551c0-36c4-4151-f573-a4d299c33f27"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3225,7 +3215,7 @@
         "id": "1pTNjd-KxxaV",
         "outputId": "dbf7703a-ea4e-4d5b-d89c-7c67b049fa5a"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3403,7 +3393,7 @@
         },
         "outputId": "3d4c4e2b-b658-4252-adc7-7a2c0ea99430"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3425,7 +3415,7 @@
       "metadata": {
         "id": "hTqzOSVm23PY"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3471,7 +3461,7 @@
         "id": "nV3PTrYZ5M6E",
         "outputId": "e38d4189-54ee-41fb-bc6f-39d2d80b543d"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3495,7 +3485,7 @@
         "id": "LJ9ub7rwHRYy",
         "outputId": "f61ed139-b04a-48cf-a102-0f7e4fa092b0"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3531,7 +3521,7 @@
         "id": "qLxbBZs7HbG4",
         "outputId": "1ad21958-c371-46c4-82d6-ef37bdfa2bf7"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3676,31 +3666,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "a = pipe.named_steps['randomforestregressor']"
+        "#### 3-4. Permutation importance, pdp, shap"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zGOuAQiQJj6Y",
-        "outputId": "f9fbeb6b-5cd6-45cd-a50b-5fce6b28d4c2"
-      },
-      "execution_count": 109,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "RandomForestRegressor(max_depth=20, max_features=0.652627497654589,\n",
-              "                      n_estimators=480)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 109
-        }
-      ]
+        "id": "Zn9YkzZ8SeLv"
+      }
     },
     {
       "cell_type": "code",
@@ -3729,7 +3701,7 @@
         "id": "pf8jOaYKJWiw",
         "outputId": "bc010eec-9193-458d-cae1-6f842646039c"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3781,7 +3753,7 @@
       "metadata": {
         "id": "e03BkYCoTDc6"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3797,7 +3769,7 @@
         "id": "ap5tSwJ8UHux",
         "outputId": "9a5b4db7-9ee1-458a-a878-3fe240d98fa7"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3836,7 +3808,7 @@
         "id": "1UcwTerUUQSs",
         "outputId": "15f1eac8-7ae5-4006-cd7e-71e7c7ab2a47"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4012,12 +3984,67 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "#### 3-4. Permutation importance, pdp, shap"
+        "model_final = pipe.named_steps['randomforestregressor']"
       ],
       "metadata": {
-        "id": "Zn9YkzZ8SeLv"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zGOuAQiQJj6Y",
+        "outputId": "f9fbeb6b-5cd6-45cd-a50b-5fce6b28d4c2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestRegressor(max_depth=20, max_features=0.652627497654589,\n",
+              "                      n_estimators=480)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 109
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install shap\n",
+        "!pip install pdpbox\n",
+        "\n",
+        "example1 = X_test.iloc[[1]]\n",
+        "\n",
+        "# 모델 예측값\n",
+        "model_final.predict(example1)\n",
+        "\n",
+        "import shap\n",
+        "explainer = shap.TreeExplainer(model_final)\n",
+        "shap_values = explainer.shap_values(example1)\n",
+        "\n",
+        "shap.initjs()\n",
+        "shap.force_plot(\n",
+        "    base_value=explainer.expected_value, \n",
+        "    shap_values=shap_values,\n",
+        "    features=row\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "ivw3OktHlFT8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 3-5. Test Model and Analysis"
+      ],
+      "metadata": {
+        "id": "q1sE7tcKkoRJ"
       }
     },
     {
@@ -4038,7 +4065,7 @@
           "height": 206
         }
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4213,7 +4240,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
