--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -5131,9 +5131,9 @@
           "height": 175
         },
         "id": "hIfQ2rUJuKUX",
-        "outputId": "9be394fc-9b75-43d0-9b3f-e1af2de11e7e"
+        "outputId": "b5fa13fe-ca6d-4ee6-d09a-be33e24f89e2"
       },
-      "execution_count": 180,
+      "execution_count": 185,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5147,7 +5147,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-35db4822-81a0-4f03-ba78-16dd36d4af49\">\n",
+              "  <div id=\"df-0fa80dd8-5619-41b3-87c8-bcfa7188391a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -5195,7 +5195,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-35db4822-81a0-4f03-ba78-16dd36d4af49')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0fa80dd8-5619-41b3-87c8-bcfa7188391a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -5246,12 +5246,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-35db4822-81a0-4f03-ba78-16dd36d4af49 button.colab-df-convert');\n",
+              "          document.querySelector('#df-0fa80dd8-5619-41b3-87c8-bcfa7188391a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-35db4822-81a0-4f03-ba78-16dd36d4af49');\n",
+              "          const element = document.querySelector('#df-0fa80dd8-5619-41b3-87c8-bcfa7188391a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -5280,10 +5280,10 @@
     {
       "cell_type": "code",
       "source": [
-        "df_table = pd.DataFrame({\"y_test\":y_test,\"baseline_model\":y_pred_test_baseline, \"best_model\":y_pred_test_best})\n",
+        "df_table = pd.DataFrame({\"y_test\":y_test,\"baseline_model\":y_pred_test_baseline, \"base_error(%)\":None,\"best_model\":y_pred_test_best, \"best_error(%)\":None})\n",
         "\n",
-        "# df_table[\"Diff\"] = df_table[\"y_value\"] - df_table[\"y_pred\"]\n",
-        "# df_table[\"(%)\"] = abs(df_table[\"Diff\"]/df_table[\"y_value\"])*100\n",
+        "df_table[\"base_error(%)\"] = (abs(df_table[\"y_test\"] - df_table[\"baseline_model\"])/df_table[\"y_test\"])*100\n",
+        "df_table[\"best_error(%)\"] = (abs(df_table[\"y_test\"] - df_table[\"best_model\"])/df_table[\"y_test\"])*100\n",
         "\n",
         "df_table.head()"
       ],
@@ -5293,24 +5293,24 @@
           "height": 206
         },
         "id": "cM-ipMJbu1Gj",
-        "outputId": "3fdaad91-8346-4f24-869e-e7458ae7804c"
+        "outputId": "a60ae37c-302f-4b8b-f14d-df4fa1dd8255"
       },
-      "execution_count": 182,
+      "execution_count": 189,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "      y_test  baseline_model  best_model\n",
-              "2701   12495         16718.1     10074.5\n",
-              "5722   26499         16718.1     26330.8\n",
-              "8976   11698         16718.1     16687.0\n",
-              "9395   54994         16718.1     46254.4\n",
-              "7425    6998         16718.1      8793.4"
+              "      y_test  baseline_model  base_error(%)  best_model  best_error(%)\n",
+              "2701   12495          9188.0           26.5     10074.5           19.4\n",
+              "5722   26499         29630.4           11.8     26330.8            0.6\n",
+              "8976   11698         18590.5           58.9     16687.0           42.6\n",
+              "9395   54994         27802.5           49.4     46254.4           15.9\n",
+              "7425    6998          6771.7            3.2      8793.4           25.7"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9d3cc3d1-fa54-4a65-aff8-9170a6938b1e\">\n",
+              "  <div id=\"df-b960eaf8-1851-4137-a26f-c9a310b00081\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -5332,44 +5332,56 @@
               "      <th></th>\n",
               "      <th>y_test</th>\n",
               "      <th>baseline_model</th>\n",
+              "      <th>base_error(%)</th>\n",
               "      <th>best_model</th>\n",
+              "      <th>best_error(%)</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>2701</th>\n",
               "      <td>12495</td>\n",
-              "      <td>16718.1</td>\n",
+              "      <td>9188.0</td>\n",
+              "      <td>26.5</td>\n",
               "      <td>10074.5</td>\n",
+              "      <td>19.4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5722</th>\n",
               "      <td>26499</td>\n",
-              "      <td>16718.1</td>\n",
+              "      <td>29630.4</td>\n",
+              "      <td>11.8</td>\n",
               "      <td>26330.8</td>\n",
+              "      <td>0.6</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8976</th>\n",
               "      <td>11698</td>\n",
-              "      <td>16718.1</td>\n",
+              "      <td>18590.5</td>\n",
+              "      <td>58.9</td>\n",
               "      <td>16687.0</td>\n",
+              "      <td>42.6</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9395</th>\n",
               "      <td>54994</td>\n",
-              "      <td>16718.1</td>\n",
+              "      <td>27802.5</td>\n",
+              "      <td>49.4</td>\n",
               "      <td>46254.4</td>\n",
+              "      <td>15.9</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7425</th>\n",
               "      <td>6998</td>\n",
-              "      <td>16718.1</td>\n",
+              "      <td>6771.7</td>\n",
+              "      <td>3.2</td>\n",
               "      <td>8793.4</td>\n",
+              "      <td>25.7</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9d3cc3d1-fa54-4a65-aff8-9170a6938b1e')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b960eaf8-1851-4137-a26f-c9a310b00081')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -5420,12 +5432,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9d3cc3d1-fa54-4a65-aff8-9170a6938b1e button.colab-df-convert');\n",
+              "          document.querySelector('#df-b960eaf8-1851-4137-a26f-c9a310b00081 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9d3cc3d1-fa54-4a65-aff8-9170a6938b1e');\n",
+              "          const element = document.querySelector('#df-b960eaf8-1851-4137-a26f-c9a310b00081');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -5448,7 +5460,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 182
+          "execution_count": 189
         }
       ]
     },
