--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -5115,13 +5115,13 @@
     {
       "cell_type": "code",
       "source": [
-        "#Test the best model\n",
+        "#Test the final model\n",
         "\n",
-        "y_pred_test_best = pipe.predict(X_test)\n",
-        "mse = mean_squared_error(y_test, y_pred_test_best)\n",
-        "mae = mean_absolute_error(y_test, y_pred_test_best)\n",
+        "y_pred_test_final = pipe.predict(X_test)\n",
+        "mse = mean_squared_error(y_test, y_pred_test_final)\n",
+        "mae = mean_absolute_error(y_test, y_pred_test_final)\n",
         "rmse = mse ** 0.5\n",
-        "r2 = r2_score(y_test, y_pred_test_best)\n",
+        "r2 = r2_score(y_test, y_pred_test_final)\n",
         "\n",
         "display(pd.DataFrame([['MSE', mse],['MAE', mae],['RMSE', rmse],['R2', r2]], columns=['Metric', 'Score']))"
       ],
@@ -5280,10 +5280,11 @@
     {
       "cell_type": "code",
       "source": [
-        "df_table = pd.DataFrame({\"y_test\":y_test,\"baseline_model\":y_pred_test_baseline, \"base_error(%)\":None,\"best_model\":y_pred_test_best, \"best_error(%)\":None})\n",
+        "#\n",
+        "df_table = pd.DataFrame({\"y_test\":y_test,\"baseline_model\":y_pred_test_baseline, \"base_error(%)\":None,\"final_model\":y_pred_test_best, \"final_error(%)\":None})\n",
         "\n",
         "df_table[\"base_error(%)\"] = (abs(df_table[\"y_test\"] - df_table[\"baseline_model\"])/df_table[\"y_test\"])*100\n",
-        "df_table[\"best_error(%)\"] = (abs(df_table[\"y_test\"] - df_table[\"best_model\"])/df_table[\"y_test\"])*100\n",
+        "df_table[\"final_error(%)\"] = (abs(df_table[\"y_test\"] - df_table[\"final_model\"])/df_table[\"y_test\"])*100\n",
         "\n",
         "df_table.head()"
       ],
@@ -5293,9 +5294,9 @@
           "height": 206
         },
         "id": "cM-ipMJbu1Gj",
-        "outputId": "a60ae37c-302f-4b8b-f14d-df4fa1dd8255"
+        "outputId": "4449ccb9-7586-4662-be27-f84bebb85159"
       },
-      "execution_count": 189,
+      "execution_count": 198,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5310,7 +5311,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b960eaf8-1851-4137-a26f-c9a310b00081\">\n",
+              "  <div id=\"df-617635ec-20b7-475b-904f-b405dacdc8fa\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -5381,7 +5382,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b960eaf8-1851-4137-a26f-c9a310b00081')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-617635ec-20b7-475b-904f-b405dacdc8fa')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -5432,12 +5433,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b960eaf8-1851-4137-a26f-c9a310b00081 button.colab-df-convert');\n",
+              "          document.querySelector('#df-617635ec-20b7-475b-904f-b405dacdc8fa button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b960eaf8-1851-4137-a26f-c9a310b00081');\n",
+              "          const element = document.querySelector('#df-617635ec-20b7-475b-904f-b405dacdc8fa');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -5460,44 +5461,46 @@
             ]
           },
           "metadata": {},
-          "execution_count": 189
+          "execution_count": 198
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "df_table = pd.DataFrame({\"y_value\":y_val,\"y_pred\":y_pred_val_rf})\n",
+        "#Comparision between baseline model and final model\n",
+        "df_analysis = pd.DataFrame({\"error(%)\":[1,5,10,20,30], \"baseline_model\":[0,0,0,0,0], \"final_model\":[0,0,0,0,0]})\n",
+        "df_analysis.set_index(\"error(%)\", inplace = True)\n",
+        "# df_table[df_table[\"base_error(%)\"]<=5][\"base_error(%)\"].count()\n",
         "\n",
-        "df_table[\"Diff\"] = df_table[\"y_value\"] - df_table[\"y_pred\"]\n",
-        "df_table[\"(%)\"] = abs(df_table[\"Diff\"]/df_table[\"y_value\"])*100\n",
         "\n",
-        "df_table.head()"
+        "df_analysis.head()"
       ],
       "metadata": {
         "id": "RL2MJzAFV4ru",
-        "outputId": "b7a7fbb1-a9c4-42ab-ad68-8c95bbde8912",
+        "outputId": "61ebaf4b-cfa4-4b0f-cd56-864b61bbd105",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 237
         }
       },
-      "execution_count": 168,
+      "execution_count": 214,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "      y_value  y_pred    Diff  (%)\n",
-              "9241    13295 13110.5   184.5  1.4\n",
-              "6956    16295 20137.3 -3842.3 23.6\n",
-              "8707     8295 11960.7 -3665.7 44.2\n",
-              "5906    18340 18457.3  -117.3  0.6\n",
-              "4177    13500 13017.2   482.8  3.6"
+              "          baseline_model  final_model\n",
+              "Error(%)                             \n",
+              "1                      0            0\n",
+              "5                      0            0\n",
+              "10                     0            0\n",
+              "20                     0            0\n",
+              "30                     0            0"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-886f683f-05fa-4e7b-9bbd-bdccd02e7128\">\n",
+              "  <div id=\"df-ffcac5f7-0c73-413d-8eac-614ab92eb46e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -5517,52 +5520,45 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>y_value</th>\n",
-              "      <th>y_pred</th>\n",
-              "      <th>Diff</th>\n",
-              "      <th>(%)</th>\n",
+              "      <th>baseline_model</th>\n",
+              "      <th>final_model</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Error(%)</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>9241</th>\n",
-              "      <td>13295</td>\n",
-              "      <td>13110.5</td>\n",
-              "      <td>184.5</td>\n",
-              "      <td>1.4</td>\n",
+              "      <th>1</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>6956</th>\n",
-              "      <td>16295</td>\n",
-              "      <td>20137.3</td>\n",
-              "      <td>-3842.3</td>\n",
-              "      <td>23.6</td>\n",
+              "      <th>5</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>8707</th>\n",
-              "      <td>8295</td>\n",
-              "      <td>11960.7</td>\n",
-              "      <td>-3665.7</td>\n",
-              "      <td>44.2</td>\n",
+              "      <th>10</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>5906</th>\n",
-              "      <td>18340</td>\n",
-              "      <td>18457.3</td>\n",
-              "      <td>-117.3</td>\n",
-              "      <td>0.6</td>\n",
+              "      <th>20</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4177</th>\n",
-              "      <td>13500</td>\n",
-              "      <td>13017.2</td>\n",
-              "      <td>482.8</td>\n",
-              "      <td>3.6</td>\n",
+              "      <th>30</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-886f683f-05fa-4e7b-9bbd-bdccd02e7128')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ffcac5f7-0c73-413d-8eac-614ab92eb46e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -5613,12 +5609,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-886f683f-05fa-4e7b-9bbd-bdccd02e7128 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ffcac5f7-0c73-413d-8eac-614ab92eb46e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-886f683f-05fa-4e7b-9bbd-bdccd02e7128');\n",
+              "          const element = document.querySelector('#df-ffcac5f7-0c73-413d-8eac-614ab92eb46e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -5641,7 +5637,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 168
+          "execution_count": 214
         }
       ]
     },
